force-app/main/default/objects/KimbleOne__ResourceGroupMembershipCriterion__c/KimbleOne__ResourceGroupMembershipCriterion__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resource Group Membership Criterion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Criterion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Group Membership Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>