force-app/main/default/objects/KimbleOne__ResourceGroupMembershipCriterion__c/fields/KimbleOne__FieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FieldName__c</fullName>
    <label>Field Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>