force-app/main/default/objects/KimbleOne__ResourceGroupMembershipCriterion__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__Resource__c.KimbleOne__ResourceType__r.KimbleOne__HasMembers__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Resource Group Membership Criteria</relationshipLabel>
    <relationshipName>ResourceGroupMembershipCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>