force-app/main/default/objects/KimbleOne__ResourceGroupMembershipCriterion__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__FieldName__c</columns>
    <columns>KimbleOne__Operator__c</columns>
    <columns>KimbleOne__Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>